tampilan role ormas

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "livewire/livewire": "^2.5",
         "phpoffice/phpword": "^0.18.2",
         "proengsoft/laravel-jsvalidation": "^4.7",
+        "spatie/laravel-activitylog": "^3.17",
         "yajra/laravel-datatables": "1.5",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
